--- a/hcn_portal_onboarding/src/Components/PendingApplications/PendingApplications.css
+++ b/hcn_portal_onboarding/src/Components/PendingApplications/PendingApplications.css
@@ -6,11 +6,57 @@
   }
   
   /* Sidebar */
-  .sidebar {
+.sidebar {
     background-color: #9A1F24;
-    color: white;
-    width: 240px;
+    width: 250px;
+    min-height: 100vh;
     padding: 20px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    transition: all 0.3s ease;
+  }
+  
+.sidebar-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+  
+.toggle-sidebar-btn-inside {
+    background: none;
+    border: none;
+    font-size: 28px;
+    color: white;
+    cursor: pointer;
+    margin-right: 10px;
+}
+  
+  /* Collapsed Sidebar */
+.collapsed-sidebar {
+    width: 60px;
+    height: 100vh;
+    background-color: #9A1F24;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    box-sizing: border-box;
+}
+  
+  /* Top area inside collapsed sidebar */
+  .collapsed-top {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    align-items: flex-start; /* align button at the top */
+  }
+  
+  /* Hamburger button inside collapsed sidebar */
+  .toggle-sidebar-btn-collapsed {
+    background: none;
+    border: none;
+    font-size: 28px;
+    color: white;
+    cursor: pointer;
   }
   
   .sidebar-title {
@@ -156,7 +202,7 @@
   font-size: 15px;
 }
 
-.profile-label {
+/* .profile-label {
   width: 220px;
   font-weight: 600;
   color: #9A1F24;
@@ -168,7 +214,7 @@
   color: #333;
   font-weight: 400;
   text-align: left;
-}
+} */
 
   /* Modal buttons container */
   .action-buttons {
@@ -234,3 +280,41 @@
   .pdf-btn:hover {
     background-color: #00429a;
   }
+
+  .profile-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  
+  .profile-table td {
+    padding: 12px 16px;
+    border-bottom: 2px solid #bbb;
+    font-size: 14px;
+    border-right: 2px solid #bbb;
+    border-left: 2px solid #bbb;
+    border-top: 2px solid #bbb;
+  }
+  
+  .profile-label {
+    font-weight: bold;
+    color: #9A1F24;
+    width: 40%;
+    text-align: left;
+    border-right: 2px solid #bbb; /* <<== vertical separator */
+  }
+  
+  .profile-value {
+    color: #333;
+    width: 60%;
+    text-align: left;
+    padding-left: 20px;
+  }
+  
+
+  
+  h3 {
+    margin-bottom: 20px;
+    color: #9A1F24;
+  }
+  
